<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF808080"
    >
    
    <com.lee.demo.view.SketchPadView
        android:id="@+id/sketchpad"
        android:layout_width="fill_parent"
        android:layout_height="375px"
    />
    
    <com.lee.demo.view.ColorSelector
        android:id="@+id/pencolorselector"
        android:layout_width="fill_parent"
        android:layout_height="60px"
        android:layout_marginTop="315px"
        android:visibility="gone"
    />
    
	<LinearLayout
	   android:orientation="horizontal"
	   android:layout_width="fill_parent"
	   android:layout_height="60px"
	   android:layout_marginTop="379px"
	   android:background="#FF808080">
		<Button
		    android:layout_width="60px"
		    android:layout_height="45px"
		    android:layout_marginLeft="5px"
		    android:layout_marginTop="3px"
		    android:id="@+id/pen"
		    android:text="@string/sketchpadtool_pen"
		    />
		<Button
            android:layout_width="65px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/eraser"
            android:text="@string/sketchpadtool_eraser"
            />
        <Button
            android:layout_width="65px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/clear"
            android:text="@string/sketchpadtool_clear"
            />
        <Button
            android:layout_width="60px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/undo"
            android:text="@string/sketchpadtool_undo"
            />
        <Button
            android:layout_width="60px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/redo"
            android:text="@string/sketchpadtool_redo"
            />
        <Button
            android:layout_width="60px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/save"
            android:text="@string/sketchpadtool_save"
            />
        <Button
            android:layout_width="60px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/load"
            android:text="@string/sketchpadtool_load"
            />
        <Button
            android:layout_width="90px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/penColor"
            android:text="@string/sketchpadtool_pencolor"
            />
        <Button
            android:layout_width="85px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/bkColor"
            android:text="@string/sketchpadtool_bkcolor"
            />
        <Button
            android:layout_width="95px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/penSize"
            android:text="@string/sketchpadtool_strokesize"
            />
        <Button
            android:layout_width="120px"
            android:layout_height="45px"
            android:layout_marginTop="3px"
            android:id="@+id/choose"
            android:text="@string/sketchpadtool_choose"
            />
	</LinearLayout>	
</RelativeLayout>
